fixing issue where background-image doesnt show on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-image: url("/solar-background.jpg");
+  background-image: url("/solar-background.png");
   background-color: white;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
   background-attachment: fixed;
 }
 
